<resources>
    <string name="app_name">CashFlowAndroidApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="titulo_upper_toolbar">REGISTRAR MOVIMIENTO</string>
    <string name="vermovimientos_mayuscula">VER MOVIMIENTOS</string>
    <string name="cuentas_mayuscula">CUENTAS:</string>
    <string name="mov_tipo_uno">Ingreso</string>
    <string name="mov_tipo_dos">Egreso</string>
    <string name="mov_tipo_tres">Movimiento</string>
    <string name="hint_observaciones">Observaciones</string>
    <string name="hint_monto">Monto</string>
    <string name="hint_fecha">Seleccione la fecha</string>
    <string name="titulo_op_movimientos">SELECCIONE SU CUENTA:</string>
    <string name="naturaleza">NATURALEZA:</string>
    <string name="departamento">DEPARTAMENTO:</string>
    <string name="caregoria">CATEGORIA:</string>
    <string name="concepto">CONCEPTO:</string>
    <string name="nav_usuario">Usuario</string>
    <string name="nav_movimientos">Movimientos</string>
    <string name="Movimientos_mayus">MOVIMIENTOS</string>
    <string name="nav_reportes">Reportes</string>
    <string name="nav_registro">Registrar Movimiento</string>
    <string name="hint_correo">Correo</string>
    <string name="hint_contra">Contraseña</string>
    <string name="ingreso">ENTRAR</string>
    <string name="login_google">Ingresa con Google</string>
    <string name="titulo_balance">BALANCE</string>
    <string name="ingreso_google">O INGRESA CON TU CUENTA GOOGLE:</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="web_client_id">1030449142930-fr89km6mpkd6miitbqhki9tmhc35oaer.apps.googleusercontent.com</string>
</resources>