<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registrar_movimientofragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".ui.registerMov.RegisterMovFragment">

    <LinearLayout
        android:id="@+id/ly1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_items_transaction_top"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="Crear Transaccion"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>


    <RadioGroup
        android:id="@+id/groupOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/ly1"
        tools:layout_editor_absoluteX="20dp">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:textSize="18dp"
            android:buttonTint="#6E63C0"
            android:tag="1"
            android:text="@string/mov_tipo_uno"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:textSize="18dp"
            android:buttonTint="#6E63C0"
            android:tag="2"
            android:text="@string/mov_tipo_dos"
            android:textAlignment="center"
            android:textColor="@color/white" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/lymontosfecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/groupOptions">

        <EditText
            android:id="@+id/txtMonto"
            android:textColorHint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#6E63C0"
            android:drawableStart="@drawable/montosmall"
            android:drawablePadding="20dp"
            android:hint="@string/hint_monto"
            android:inputType="numberDecimal"
            android:padding="12dp"
            android:paddingHorizontal="20dp"
            android:textColor="@color/white"
            tools:inputType="number" />


        <EditText
            android:id="@+id/txt_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/white"
            android:clickable="false"
            android:drawableStart="@drawable/entregasmall"
            android:drawablePadding="20dp"
            android:focusable="false"
            android:hint="@string/hint_fecha"
            android:padding="12dp"
            android:paddingHorizontal="20dp"
            android:textColor="@color/white" />

    </LinearLayout>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/titulo_op_movimientos"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lymontosfecha" />


    <TextView
        android:id="@+id/txtvca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:paddingHorizontal="20dp"
        android:text="@string/titulo_op_movimientos"
        android:textColor="#9E93E9"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Spinner
        android:id="@+id/spCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="20dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/txtvca" />


    <TextView
        android:id="@+id/txtv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:paddingHorizontal="20dp"
        android:text="@string/caregoria"
        android:textColor="#6E63C0"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spCuenta" />


    <Spinner
        android:id="@+id/spCat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="05dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/txtv" />


    <TextView
        android:id="@+id/txtvc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:paddingHorizontal="20dp"
        android:text="@string/concepto"
        android:textColor="#6E63C0"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spCat" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textMultiLine"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvc" />


    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF6200EE"
        android:text="GUARDAR"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="80dp"
        android:textColor="#FFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>