<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/milogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".LoginActivity">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@drawable/rounded_corner"
        android:orientation="vertical"
        android:gravity="center"
        app:cardElevation="5dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:src="@drawable/negativo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <TextView
            android:id="@+id/textView"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="31dp"
            android:text="Bienvenido"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/loginuser"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@android:color/white"
            android:hint="@string/hint_correo"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/loginpass"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginuser"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="21dp"
            android:backgroundTint="@android:color/white"
            android:hint="@string/hint_contra"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/loginSend"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginpass"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="35dp"
            android:backgroundTint="@android:color/white"
            android:text="@string/ingreso"
            android:textColor="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginpass"
            app:layout_constraintWidth_percent="0.8" />


        <TextView
            android:id="@+id/googleText"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginSend"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="34dp"
            android:text="@string/ingreso_google"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginSend" />


        <Button
            android:id="@+id/googleLogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/googleText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="35dp"
            android:backgroundTint="@android:color/white"
            android:text="@string/login_google"
            android:textColor="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/googleText" />


        <!--        <ImageView-->
<!--            android:id="@+id/googleLogin"-->
<!--            android:layout_width="40dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:layout_below="@+id/googleText"-->
<!--            android:layout_alignParentStart="true"-->
<!--            android:layout_alignParentEnd="true"-->
<!--            android:layout_marginHorizontal="60dp"-->
<!--            android:layout_marginTop="42dp"-->
<!--            android:layout_marginBottom="10dp"-->
<!--            android:clickable="true"-->
<!--            android:src="@drawable/google_logo"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.5"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/googleText" />-->


    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>